add register to navbar

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Main page - index </title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css' ) }}">
+    <title>About</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css' ) }}">
 </head>
 
 <body>
@@ -18,8 +18,10 @@
     </div>
 </body>
 
-<body>
-    <h1 style="font-family: Verdana"> Start project!!! </h1>
+<body class="about-text">
+    <div>
+        <p>This is test site created to study</p>
+    </div>
 </body>
 
 </html>
