--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Main page - index </title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css' ) }}">
+    <title>Contact info</title>
+    <link rel="stylesheet" href="{{ url_for ('static', filename='css/index.css' ) }}">
 </head>
 
 <body>
@@ -19,7 +19,12 @@
 </body>
 
 <body>
-    <h1 style="font-family: Verdana"> Start project!!! </h1>
+    <h1>To contact, you can choose:</h1>
+        <ul>
+            <li>Email: example@gmail.com</li>
+            <li>Call an assistant: +380 00 000 00 00</li>
+            <li>Or text on our viber: +380 00 000 00 00</li>
+        </ul>
 </body>
 
 </html>
