--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Main page - index </title>
+    <title>News</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css' ) }}">
 </head>
 
@@ -19,7 +19,13 @@
 </body>
 
 <body>
-    <h1 style="font-family: Verdana"> Start project!!! </h1>
+  <h1>Example new</h1>
+  <p>Some info</p>
 </body>
 
+<body>
+    <div class="nothing-new">
+        <p>Wait for new!</p>
+    </div>
+</body>
 </html>
