--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -39,7 +39,7 @@ text-align: center;
     font-size: 100px;
 }
 .show-text-data-a{
-    font-size=15px;
+    font-size: 15px;
     position: relative;
     top: 100px;
     text-decoration: none;
@@ -48,4 +48,8 @@ text-align: center;
 .show-text-data-a:hover{
     color:black;
     background-color: white;
+}
+.about-text{
+    font-size=25px;
+    font-family: Verdana;
 }
