--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -16,12 +16,8 @@
     background-color: #ddd;
     color: black;
 }
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
 .show-text{
-text-align: center;
+    text-align: center;
 }
 .show-text-data{
     font-family: Verdana;
@@ -30,6 +26,7 @@ text-align: center;
     margin-left: 250px;
     margin-right: 250px;
     height:250px;
+    border: 10px double #FFFFFF;
 }
 .show-text-data-p{
     margin: 0;
@@ -52,4 +49,15 @@ text-align: center;
 .about-text{
     font-size=25px;
     font-family: Verdana;
+}
+#textarea{
+    resize: none;
+    border: solid;
+    height: 150px;
+    width: 50%;
+    overflow: visible;
+    margin-left: 20%;
+#submit-textarea{
+    position: absolute;
+    margin-left: 150px;
 }
