--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,7 +4,7 @@
 
   <form action="/register/success" method="post">
     <input name="name" autocomplete="off" placeholder="Name" type="text">
-    <select>
+    <select name="sport">
       <option value="Basketball">Basketball</option>
       <option value="Football">Football</option>
       <option value="Сhess">Сhess</option>
