--- a/app/templates/text_form.html
+++ b/app/templates/text_form.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Text form</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css' ) }}">
 </head>
 <body>
     <form action="/save" method="POST">
         <h2> Add some text: </h2>
         <hr>
-        <textarea name="text" id="" cols="30" rows="10"></textarea>
+        <textarea name="text" id="textarea" cols="30" rows="10"></textarea>
         <br>
-        <input type="submit">
+        <input id="submit-textarea" type="submit">
     </form>
 </body>
 </html>
